@@ -1,3 +1,8 @@
+* April 27 2003, Henrik Isaksson *
+
+	* Updated keymapconv.cpp with dead keys and new file format.
+	  (old file format still supported though)
+
 * February 18 2003, Kristian Van Der Vliet *
 
 	* Fixed a braindead bug in dhcpc interface.c
